@@ -29,3 +29,4 @@
 * applied const correctness patch from allefant
 * fixed memory leak in list & dict copy functions
 * improved kwargs support
+* got it compiling with -Wc++-compat
